# Axon

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: create-ico.js  create-icon.js  create-icon.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  system-tray.js  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_manager.rs  main.rs
src/components/: AppContextMenu.tsx  AppList.tsx  AppMenu.tsx  CustomIconUpload.tsx  FolderContextMenu.tsx  FolderIconUpload.tsx  Folders.tsx  LoadingScreen.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  ThemeProvider.tsx  Titlebar.tsx
src/hooks/: useDelayedLoading.ts
src/lib/: icons.ts  system.ts
src/store/: useAppStore.ts  useFolderStore.ts  useFoldersStore.ts  useSettingsStore.ts
src/types/: app.ts  folder.ts
