[package]
name = "app-hub"
version = "0.1.0"
description = "A modern app launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-start-dragging", "fs-read-dir", "window-unmaximize", "window-show", "window-close", "dialog-open", "fs-exists", "fs-write-file", "fs-read-file", "window-maximize", "window-unminimize", "window-minimize", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
window-vibrancy = "0.4.3"
notify = "6.1.1"
winreg = "0.52.0"
base64 = "0.21.7"
image = "0.24.8"
rayon = "1.8.1"
windows = { version = "0.51.1", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "implement"
] }
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
